--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "geojson": "^0.5.0",
+    "mapbox-gl": "^2.6.1",
     "socket.io-client": "^4.4.0",
     "vue": "^3.0.0",
+    "vue-mapbox": "^0.4.1",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
@@ -24,7 +27,9 @@
     "@storybook/addon-links": "^6.3.12",
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/vue3": "^6.3.12",
+    "@types/geojson": "^7946.0.8",
     "@types/jest": "^24.0.19",
+    "@types/mapbox-gl": "^2.4.2",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -45,6 +50,7 @@
     "lint-staged": "^9.5.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "socket.io-mock": "^1.3.2",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "~4.1.5",
     "vue-jest": "^5.0.0-0",
